<resources>
    <string name="app_name">WatchU</string>
    <string name="text">username</string>
    <string name="fried_burger">The Memes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="web_client_id">296670000726-app708cgqh1ua1aoh779epbleesfr33p.apps.googleusercontent.com</string>
    <string name="empty" />
    <string name="zero">0</string>
    <string name="original_audio">Original Audio</string>
    <string name="subscribe">Subscribe</string>
    <string name="subscribed">Subscribed</string>
    <string name="home">Home</string>
    <string name="shorts">Shorts</string>
    <string name="upload">Upload</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="library">Library</string>
    <string name="connect_with_tv_code">Connect with TV Code</string>
    <string name="manage_devices">Manage Devices</string>
    <string name="help">Help</string>
    <string name="download_video">Download Video</string>
    <string name="share_video">Share Video</string>
    <string name="save_to_playlist">Save to Playlist</string>
    <string name="edit_post">Edit Post</string>
    <string name="delete_post">Delete Post</string>
    <string name="change_cover_picture">Change Cover Picture</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="description">Description</string>
    <string name="save_to_watch_later">Save to Watch Later</string>
    <string name="captions">Captions</string>
    <string name="quality">Quality</string>
    <string name="not_interested">Not interested</string>
    <string name="don_t_recommend_this_channel">Don\'t Recommend this Channel</string>
    <string name="report">Report</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="download">Download</string>
    <string name="view_your_channel">View Your Channel</string>
    <string name="log_out">Log Out</string>
    <string name="settings">Settings</string>
    <string name="view_type">View Type</string>
    <string name="app_logo">App Logo</string>
    <string name="cast_button">Cast button</string>
    <string name="record_button">Record button</string>
    <string name="search_button">Search Button</string>
    <string name="profile">Profile Button</string>
    <string name="more_about_this_channel">More About This Channel</string>
    <string name="_abc">34 subscribers . 20 videos</string>
    <string name="channel_name">Channel name</string>
    <string name="prefix">\@</string>
    <string name="manage_videos">Manage Videos</string>
    <string name="sign_in">Sign in\nto\nWatchU</string>
    <string name="sign_In">Sign-in</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="or">or</string>
    <string name="sign_up">Sign Up</string>
    <string name="not_a_user">Not a user ?</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="register">Register</string>
    <string name="already_a_user">Already a user ?</string>
    <string name="x_months"> X Months</string>
    <string name="this_is_my_first_post_on_watchu">This is my First Post on WatchU</string>
    <string name="y_m">Y M</string>
    <string name="z_m">Z M</string>
    <string name="title">Title</string>
    <string name="x_m">X M</string>
    <string name="views">\ views</string>
    <string name="ago">\ ago</string>
    <string name="xm">XM</string>
    <string name="xk">XK</string>
    <string name="upload_video">Upload Video</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_description">Enter Description</string>
    <string name="upload_thumbnail">Upload Thumbnail</string>
    <string name="post">Post</string>
    <string name="cancel">Cancel</string>
    <string name="new_username">New Username</string>
    <string name="new_channel_name">New Channel Name</string>
    <string name="username">Username :</string>
    <string name="channel_name_">Channel Name :</string>
    <string name="new_post">New Post</string>
    <string name="enter_new_title">Enter New Title</string>
    <string name="enter_new_description">Enter New Description</string>
    <string name="post_something">Post Something…</string>
    <string name="popular_videos">Popular Videos</string>
    <string name="videos">Videos</string>
    <string name="playlists">Playlists</string>
    <string name="sort_by">Sort By</string>
    <string name="comments">Comments</string>
    <string name="_19_m">0</string>
    <string name="type_of_view">Type of View</string>
    <string name="x">x</string>
    <string name="slash">/</string>
    <string name="y">y</string>
    <string name="_100">100</string>
    <string name="Public">Public</string>
    <string name="dot">\ . \ </string>
    <string name="playlist">Playlist</string>
    <string name="_100k">100K</string>
    <string name="mm_ss">MM:SS</string>
    <string name="dislike">Dislike</string>
    <string name="y_k">Y K</string>
    <string name="song_name">song name</string>
    <string name="_10_years">10 years</string>
    <string name="your_comment_will_appear_here">Your comment will appear here</string>
    <string name="_10m">10M</string>
    <string name="replies">\ replies</string>
    <string name="_5m">5M</string>
    <string name="_6k">6K</string>
    <string name="streamed">Streamed</string>
    <string name="share_post">Share Post</string>
    <string name="report_post">Report Post</string>
</resources>