<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/newUsernameChannel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/new_username"
        android:inputType="text"
        android:textColor="@color/medium_violet_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView34"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/newChannelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/new_channel_name"
        android:inputType="text"
        android:textColor="@color/medium_violet_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView35"
        app:layout_constraintTop_toBottomOf="@+id/newUsernameChannel" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/username"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/newUsernameChannel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/newUsernameChannel" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/channel_name_"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/newChannelName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/newChannelName" />
</androidx.constraintlayout.widget.ConstraintLayout>