<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:background="@color/black">


    <androidx.cardview.widget.CardView
        android:id="@+id/profileHomecardView2"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="5dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/profileHomethumbnail1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/nature"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/profileHometime1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/black"
                android:padding="2dp"
                android:text="@string/mm_ss"
                android:textColor="@color/white"
                android:textSize="11sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/profileHomeviewCount1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/xm"
        android:textColor="@color/dark_gray"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/profileHomecardView2"
        app:layout_constraintTop_toBottomOf="@+id/profileHometitle1" />

    <TextView
        android:id="@+id/profileHometextView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/views"
        android:textColor="@color/dark_gray"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/profileHomeviewCount1"
        app:layout_constraintStart_toEndOf="@+id/profileHomeviewCount1"
        app:layout_constraintTop_toTopOf="@+id/profileHomeviewCount1" />

    <TextView
        android:id="@+id/profileHometextView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="@string/dot"
        android:textColor="@color/dark_gray"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/profileHometextView6"
        app:layout_constraintStart_toEndOf="@+id/profileHometextView6" />

    <TextView
        android:id="@+id/profileHometimeAgo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/x_months"
        android:textColor="@color/dark_gray"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/profileHometextView6"
        app:layout_constraintStart_toEndOf="@+id/profileHometextView7"
        app:layout_constraintTop_toTopOf="@+id/profileHometextView6" />

    <TextView
        android:id="@+id/profileHometextView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ago"
        android:textColor="@color/dark_gray"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/profileHometimeAgo1"
        app:layout_constraintStart_toEndOf="@+id/profileHometimeAgo1"
        app:layout_constraintTop_toTopOf="@+id/profileHometimeAgo1" />

    <ImageButton
        android:id="@+id/profileHomeimageButton2"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/float_transparent"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/three_dots_white" />


    <TextView
        android:id="@+id/profileHometitle1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/title"
        android:textColor="@color/white"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/profileHomeimageButton2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/profileHomecardView2"
        app:layout_constraintTop_toTopOf="@+id/profileHomecardView2" />

</androidx.constraintlayout.widget.ConstraintLayout>