<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/add_to_cart_button"
    tools:context=".ProfileLogin">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/dp_background"
        android:fontFamily="@font/alfa_slab_one"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/sign_in"
        android:textColor="@color/honeydew"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/googleSignIn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/black"
        android:drawableStart="@drawable/google_logo"
        android:elevation="20dp"

        android:fontFamily="monospace"
        android:paddingStart="30dp"
        android:paddingEnd="10dp"
        android:text="@string/sign_In"
        android:textColor="@color/white_smoke"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card1920"
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_img_1">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signInButton"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@color/deep_pink"
                android:drawableStart="@drawable/email2"
                android:drawableTint="@color/midnight_blue"
                android:elevation="20dp"
                android:paddingStart="30dp"
                android:text="@string/sign_In"
                android:textColor="@color/midnight_blue"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="@+id/password"
                app:layout_constraintStart_toStartOf="@+id/password"
                app:layout_constraintTop_toBottomOf="@+id/password"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/email"
                android:layout_width="300dp"
                android:layout_height="50dp"

                android:layout_marginTop="40dp"
                android:background="@color/yellow"
                android:elevation="15dp"
                android:ems="10"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/dark_green"
                android:textColorHint="@color/dark_magenta"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/password"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@color/yellow"
                android:elevation="15dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/dark_green"
                android:textColorHint="@color/dark_magenta"
                app:layout_constraintEnd_toEndOf="@+id/email"
                app:layout_constraintStart_toStartOf="@+id/email"
                app:layout_constraintTop_toBottomOf="@+id/email" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/or"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/card1920"
        app:layout_constraintStart_toStartOf="@+id/card1920"
        app:layout_constraintTop_toBottomOf="@+id/card1920" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/yellow_green"
        android:drawableStart="@drawable/signup_image2"
        android:drawableTint="#016201"
        android:elevation="20dp"
        android:text="@string/sign_up"
        android:textColor="#025F02"
        android:textSize="24sp"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView29"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView29"
        app:layout_constraintTop_toTopOf="@+id/textView29" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/not_a_user"
        android:textColor="@color/dark_blue"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/signUpButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/googleSignIn" />
</androidx.constraintlayout.widget.ConstraintLayout>