<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black">

    <ImageView
        android:id="@+id/thumbnailPlaylistsHomeProfile"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/nature" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/black"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/thumbnailPlaylistsHomeProfile"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="30dp"
            android:layout_height="20dp"
            app:tint="@color/white_smoke"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/playlist" />

        <TextView
            android:id="@+id/videoCountPlaylistHomeShorts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_100"
            android:textColor="@color/ghost_white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView6"
            app:layout_constraintStart_toEndOf="@+id/imageView6"
            app:layout_constraintTop_toTopOf="@+id/imageView6" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/videos"
            android:textColor="@color/ghost_white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/videoCountPlaylistHomeShorts"
            app:layout_constraintStart_toEndOf="@+id/videoCountPlaylistHomeShorts"
            app:layout_constraintTop_toTopOf="@+id/videoCountPlaylistHomeShorts" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/titleHomeProfilePlaylists"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:text="@string/title"
        android:textColor="@color/floral_white"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/homeProfilePlaylistsMenuButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thumbnailPlaylistsHomeProfile" />

    <ImageView
        android:id="@+id/homeProfilePlaylistsMenuButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thumbnailPlaylistsHomeProfile"
        app:srcCompat="@drawable/three_dots_white" />
</androidx.constraintlayout.widget.ConstraintLayout>